@@ -36,6 +36,13 @@ Added default driver definitions for OpenEdge and older 9.1E and 10.0B Progress 
 
 Bug fixes:
 
+#1323 Fixed compile bugs when compiling with Java 9
+
+Fixed Java 9 compatibility issue concerning the JavaBeans Activation Framework:
+  javax.activation.jar was added to our libs following Bill Shannon's suggestion here https://github.com/javaee/javamail/issues/266
+  The jar was downloaded here https://github.com/javaee/activation
+
+
 Mac scripts where changed according to the comment of Nov. 18. 2017 in bug #1321.
   This change contradicts the change made for bug #1310.
   Since there seems to be no version that works for all Mac users
